// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HomeView matches snapshot (coordinator) 1`] = `
<div
  className="home-view app-view"
>
  <Memo(StatusCard)
    capabilities={
      Capabilities {
        "coordinator": true,
        "maxTaskSlots": undefined,
        "multiStageQueryDart": false,
        "multiStageQueryTask": false,
        "overlord": false,
        "queryType": "none",
      }
    }
  />
  <React.Fragment>
    <Memo(DatasourcesCard)
      capabilities={
        Capabilities {
          "coordinator": true,
          "maxTaskSlots": undefined,
          "multiStageQueryDart": false,
          "multiStageQueryTask": false,
          "overlord": false,
          "queryType": "none",
        }
      }
    />
    <Memo(SegmentsCard)
      capabilities={
        Capabilities {
          "coordinator": true,
          "maxTaskSlots": undefined,
          "multiStageQueryDart": false,
          "multiStageQueryTask": false,
          "overlord": false,
          "queryType": "none",
        }
      }
    />
  </React.Fragment>
  <Memo(ServicesCard)
    capabilities={
      Capabilities {
        "coordinator": true,
        "maxTaskSlots": undefined,
        "multiStageQueryDart": false,
        "multiStageQueryTask": false,
        "overlord": false,
        "queryType": "none",
      }
    }
  />
  <Memo(LookupsCard)
    capabilities={
      Capabilities {
        "coordinator": true,
        "maxTaskSlots": undefined,
        "multiStageQueryDart": false,
        "multiStageQueryTask": false,
        "overlord": false,
        "queryType": "none",
      }
    }
  />
</div>
`;

exports[`HomeView matches snapshot (full) 1`] = `
<div
  className="home-view app-view"
>
  <Memo(StatusCard)
    capabilities={
      Capabilities {
        "coordinator": true,
        "maxTaskSlots": undefined,
        "multiStageQueryDart": true,
        "multiStageQueryTask": true,
        "overlord": true,
        "queryType": "nativeAndSql",
      }
    }
  />
  <React.Fragment>
    <Memo(DatasourcesCard)
      capabilities={
        Capabilities {
          "coordinator": true,
          "maxTaskSlots": undefined,
          "multiStageQueryDart": true,
          "multiStageQueryTask": true,
          "overlord": true,
          "queryType": "nativeAndSql",
        }
      }
    />
    <Memo(SegmentsCard)
      capabilities={
        Capabilities {
          "coordinator": true,
          "maxTaskSlots": undefined,
          "multiStageQueryDart": true,
          "multiStageQueryTask": true,
          "overlord": true,
          "queryType": "nativeAndSql",
        }
      }
    />
  </React.Fragment>
  <React.Fragment>
    <Memo(SupervisorsCard)
      capabilities={
        Capabilities {
          "coordinator": true,
          "maxTaskSlots": undefined,
          "multiStageQueryDart": true,
          "multiStageQueryTask": true,
          "overlord": true,
          "queryType": "nativeAndSql",
        }
      }
    />
    <Memo(TasksCard)
      capabilities={
        Capabilities {
          "coordinator": true,
          "maxTaskSlots": undefined,
          "multiStageQueryDart": true,
          "multiStageQueryTask": true,
          "overlord": true,
          "queryType": "nativeAndSql",
        }
      }
    />
  </React.Fragment>
  <Memo(ServicesCard)
    capabilities={
      Capabilities {
        "coordinator": true,
        "maxTaskSlots": undefined,
        "multiStageQueryDart": true,
        "multiStageQueryTask": true,
        "overlord": true,
        "queryType": "nativeAndSql",
      }
    }
  />
  <Memo(LookupsCard)
    capabilities={
      Capabilities {
        "coordinator": true,
        "maxTaskSlots": undefined,
        "multiStageQueryDart": true,
        "multiStageQueryTask": true,
        "overlord": true,
        "queryType": "nativeAndSql",
      }
    }
  />
</div>
`;

exports[`HomeView matches snapshot (overlord) 1`] = `
<div
  className="home-view app-view"
>
  <Memo(StatusCard)
    capabilities={
      Capabilities {
        "coordinator": false,
        "maxTaskSlots": undefined,
        "multiStageQueryDart": false,
        "multiStageQueryTask": false,
        "overlord": true,
        "queryType": "none",
      }
    }
  />
  <React.Fragment>
    <Memo(SupervisorsCard)
      capabilities={
        Capabilities {
          "coordinator": false,
          "maxTaskSlots": undefined,
          "multiStageQueryDart": false,
          "multiStageQueryTask": false,
          "overlord": true,
          "queryType": "none",
        }
      }
    />
    <Memo(TasksCard)
      capabilities={
        Capabilities {
          "coordinator": false,
          "maxTaskSlots": undefined,
          "multiStageQueryDart": false,
          "multiStageQueryTask": false,
          "overlord": true,
          "queryType": "none",
        }
      }
    />
  </React.Fragment>
</div>
`;
